--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -505,14 +505,15 @@ set(iterator_src DakotaIterator.cpp DakotaAnalyzer.cpp DakotaPStudyDACE.cpp
     NonDExpansion.cpp NonDPolynomialChaos.cpp NonDStochCollocation.cpp
     NonDMultilevelPolynomialChaos.cpp NonDMultilevelStochCollocation.cpp
     NonDSurrogateExpansion.cpp NonDCalibration.cpp NonDBayesCalibration.cpp
-    NonDWASABIBayesCalibration.cpp NonDSampling.cpp NonDLHSSampling.cpp
-    NonDEnsembleSampling.cpp NonDHierarchSampling.cpp NonDMultilevelSampling.cpp
-    NonDMultilevControlVarSampling.cpp NonDNonHierarchSampling.cpp
-    NonDACVSampling.cpp NonDGenACVSampling.cpp NonDMultifidelitySampling.cpp
-    NonDAdaptImpSampling.cpp NonDGPImpSampling.cpp NonDPOFDarts.cpp
-    NonDRKDDarts.cpp DakotaMinimizer.cpp DakotaOptimizer.cpp
-    DakotaTraitsBase.cpp DakotaLeastSq.cpp NonlinearCGOptimizer.cpp 
-    SurrBasedMinimizer.cpp SurrBasedLocalMinimizer.cpp SurrBasedLevelData.cpp
+    NonDWASABIBayesCalibration.cpp NonDSampling.cpp NonDLatticeSampling.cpp
+    NonDLHSSampling.cpp NonDEnsembleSampling.cpp NonDHierarchSampling.cpp
+    NonDMultilevelSampling.cpp NonDMultilevControlVarSampling.cpp
+    NonDNonHierarchSampling.cpp NonDACVSampling.cpp NonDGenACVSampling.cpp
+    NonDMultifidelitySampling.cpp NonDAdaptImpSampling.cpp
+    NonDGPImpSampling.cpp NonDPOFDarts.cpp NonDRKDDarts.cpp DakotaMinimizer.cpp
+    DakotaOptimizer.cpp DakotaTraitsBase.cpp DakotaLeastSq.cpp
+    NonlinearCGOptimizer.cpp  SurrBasedMinimizer.cpp
+    SurrBasedLocalMinimizer.cpp SurrBasedLevelData.cpp
     HierarchSurrBasedLocalMinimizer.cpp DataFitSurrBasedLocalMinimizer.cpp
     SurrBasedGlobalMinimizer.cpp EffGlobalMinimizer.cpp OptDartsOptimizer.cpp
     MetaIterator.cpp ConcurrentMetaIterator.cpp SeqHybridMetaIterator.cpp
