--- a/src/unit/CMakeLists.txt
+++ b/src/unit/CMakeLists.txt
@@ -163,6 +163,11 @@ if (DAKOTA_MODULE_SURROGATES)
     LINK_LIBS Boost::boost)
 endif (DAKOTA_MODULE_SURROGATES)
 
+dakota_add_unit_test(NAME dakota_low_discrepancy_test
+  SOURCES low_discrepancy.cpp
+  LINK_DAKOTA_LIBS
+  LINK_LIBS Boost::boost)
+
 # Copy needed unit test auxiliary data files
 dakota_copy_test_file("${CMAKE_CURRENT_SOURCE_DIR}/expt_data_test_files"
   "${CMAKE_CURRENT_BINARY_DIR}/expt_data_test_files"
